# blog

./: .gitignore  Makefile  README.md  about.md  conf.py  index.md  pyproject.toml  references.bib
_static/: custom.css
_templates/: info.html  navbar.html
misc/climbing/: map.html
posts/: 2022-07-18-Generative vs Discriminative Models.md  2022-08-22-Regression.md
